# ti-apps-launcher

./: .gitignore  Backend.h  Backend2.h  Backend3.h  Backend4.h  Backendstats.h  Benchmarksbackend.h  CMakeLists.txt  Camrecbackend.h  Gpuperfbackend.h  LICENSE  README.md  benchmarks.qml  camerarecorder.qml  edgeai-gui-app.pro  gpuperformance.qml  industrial.qml  main.cpp  main.qml  main2.qml  qml.qrc  stats.qml  ti-apps-launcher.cpp  ti-apps-launcher.pro  ti-apps-launcher.qml  ti-apps-launcher.qrc  ti-demo.cpp  ti-demo.pro  ti-demo.qml  ti-demo.qrc
apps/: 3d_demo.qml  CircularGauge.qml  Gauge.qml  appsmenu.qml  arm_analytics.qml  auto_cluster.qml  benchmarks.qml  benchmarks_jacinto.qml  camera.qml  camera_old.qml  camera_recorder.qml  chromium_browser.qml  codecs.qml  deviceinfo.qml  firefox_browser.qml  gpu_performance.qml  industrial_control.qml  industrial_control_minimal.qml  industrial_control_sitara.qml  live_camera.qml  main.qml  settings.qml  seva_store.qml  stats.qml  terminal.qml  topbar.qml  wifi.qml
backend/: appsmenu.cpp  arm_analytics.cpp  benchmarks.cpp  benchmarks.h  camera.cpp  camera_recorder.cpp  camera_recorder.h  deviceinfo.cpp  gpu_performance.cpp  live_camera.cpp  perf_stats.cpp  run_cmd.cpp  settings.cpp  seva_store.cpp  stats.cpp  stats.h  terminal.cpp  ti-apps-launcher.cpp  topbar.cpp  wifi.cpp
configs/: am62pxx-evm.cpp  am62pxx-evm.h  am62xx-evm.cpp  am62xx-evm.h  am62xx-lp-evm.cpp  am62xx-lp-evm.h  am62xx-sip-evm.cpp  am62xxsip-evm.cpp  am62xxsip-evm.h  am67-sk.cpp  am67-sk.h  am68-sk.cpp  am68-sk.h  am69-sk.cpp  am69-sk.h  beagleplay.cpp  beagleplay.h  config_common.h  generic.cpp  generic.h  (+1 more)
(+44 files in other folders)
